@@ -1,3 +1,7 @@
+2007-03-18 15:46 nick
+
+	* libxfce4panel/xfce-hvbox.c: Mmm thought orientation was a property... Fix that.
+
 2007-03-18 15:23 nick
 
 	* libxfce4panel: Add visibility support to reduce the library size a bit.
